# welds_test

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yaml
src/: errors.rs  input.css  main.rs
src/assets/js/: greetings.js  hot_reload.js
src/controllers/: assets_controller.rs  greetings_controller.rs  health_controller.rs  mod.rs
src/controllers/auth_controller/: mod.rs
src/controllers/auth_controller/providers/: fakeoauth.rs  google.rs  mod.rs
src/migrations/: m20250210064356_create_table_dogs.rs  mod.rs
src/models/: mod.rs
src/models/dog/: mod.rs
src/views/: mod.rs
src/views/greetings/: index.rs
src/views/layouts/: main.rs  mod.rs
