[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = "0.4.39"
dotenvy = "0.15.7"
futures = "0.3.31"
gumbo-lib = { version = "0.1.4", features = ["sessions", "turbo-streams"] }
log = "0.4.25"
oauth2 = "5.0.0"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.217"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["sync"] }
welds = { git = "https://github.com/weldsorm/welds.git", features = ["mssql", "postgres", "mysql", "migrations"] }
welds-connections = { git = "https://github.com/weldsorm/welds.git", features = ["mssql", "postgres", "mysql"] }
yew = { version = "0.21.0", features = ["ssr"] }
